# email-newsletter

./: .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: gh-actions.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
