[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"


[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
reqwest = "0.11.17"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1.28.0", features = ["macros", "rt-multi-thread"]}
config = "0.11"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
